cmake_minimum_required(VERSION 3.15)

project(cpp-wolf CXX)

set(CPP_WOLF_BINARY_DIR ${PROJECT_BINARY_DIR}/bin)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/cmake")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CPP_WOLF_BINARY_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CPP_WOLF_BINARY_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CPP_WOLF_BINARY_DIR})

find_package(OpenGL REQUIRED)

include(SDL)
include(Assets)

add_subdirectory(src)
